# camlpak

./: README.md  dune-project
lib/: deps.ml  dune  json.ml  lock.ml  manifest.ml  registry.ml  types.ml  util.ml
test/: dune  test_camlpak.ml  test_deps.ml  test_json.ml  test_lock.ml  test_registry.ml  test_util.ml  util.ml
test/fixtures/: invalid_manifest.json  npm_fetched.json  real_deps.json  valid_manifest.json
